kube-objects/Deployment_reverse-words-app_reverse-words.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"reversewords-app"},"name":"reverse-words","namespace":"reverse-words-app"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"reversewords-app"}},"template":{"metadata":{"labels":{"app":"reversewords-app"}},"spec":{"containers":[{"env":[{"name":"RELEASE","valueFrom":{"configMapKeyRef":{"key":"release","name":"reversewords-release"}}}],"image":"quay.io/mavazque/reversewords:latest","livenessProbe": [...]
  labels:
    app: reversewords-app
  name: reverse-words
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reversewords-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reversewords-app
    spec:
      containers:
      - env:
        - name: RELEASE
          valueFrom:
            configMapKeyRef:
              key: release
              name: reversewords-release
        image: quay.io/mavazque/reversewords:0.28
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        name: reverse-words
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /reversewords-storage/
          name: reversewords-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: reversewordsapp
      serviceAccountName: reversewordsapp
      terminationGracePeriodSeconds: 30
      volumes:
      - name: reversewords-storage
        persistentVolumeClaim:
          claimName: reversewords-storage
