kube-objects/Service_reverse-words-app_reverse-words.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"reversewords-app"},"name":"reverse-words","namespace":"reverse-words-app"},"spec":{"ports":[{"name":"http","port":8080,"protocol":"TCP","targetPort":"http"}],"selector":{"app":"reversewords-app"},"type":"ClusterIP"}}
  labels:
    app: reversewords-app
  name: reverse-words
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: reversewords-app
  sessionAffinity: None
  type: ClusterIP
