kube-objects/Route_reverse-words-app_reverse-words.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"labels":{"app":"reversewords-app"},"name":"reverse-words","namespace":"reverse-words-app"},"spec":{"port":{"targetPort":8080},"tls":{"insecureEdgeTerminationPolicy":"Redirect","termination":"edge"},"to":{"kind":"Service","name":"reverse-words","weight":100}}}
    openshift.io/host.generated: "true"
  labels:
    app: reversewords-app
  name: reverse-words
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: reverse-words
    weight: 100
  wildcardPolicy: None
